--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@types/cookie": "^0.5.1",
     "@types/formidable": "^3.4.5",
+    "@types/lodash": "^4.17.13",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.19.3",
     "@types/nprogress": "^0.2.3",
