--- a/.env.production
+++ b/.env.production
@@ -22,4 +22,4 @@ NEXTAUTH_JWT_SECRET=GURU2023TOKENGANZORIGDEV20249FZIGFVRSTAR
 
 MONGODB_URI=mongodb+srv://ganzo:z8XH2p5h0ZUtvzdH@cluster0.f2lcjv1.mongodb.net/tulga-shop?retryWrites=true&w=majority
 
-API_BASE_URL=http://localhost:3000/api
+API_BASE_URL=https://tulga-shop.com/api
